# nyas-examples

./: .gitignore  README.md
crm-antigravity/: package-lock.json
crm-antigravity/prisma/: schema.prisma
crm-antigravity/src/components/: Sidebar.tsx
crm-antigravity/src/lib/: prisma.ts
crm-go-codex/: .env.example  README.md  SESSION.md  go.mod
crm-go-codex/cmd/server/: main.go
crm-go-codex/internal/crm/: app.go  models.go  store.go
crm-go-codex/internal/crm/static/: styles.css
crm-go-codex/internal/crm/templates/: customers.html  dashboard.html  deals.html
crm-py-antigravity/: README.md  database.py  main.py  models.py  pyproject.toml  seed.py
crm-py-antigravity/static/: style.css
crm-py-antigravity/templates/: base.html  customers.html  dashboard.html  deals.html
crm-ts-antigravity/: README.md  package.json
crm-ts-antigravity/src/app/: actions.ts  layout.tsx  page.tsx
crm-ts-antigravity/src/app/customers/: page.tsx
event_analytics-claude/: README.md  tracker.js
event_analytics-claude/.claude/: settings.local.json
event_analytics-claude/backend/: .env  package-lock.json  package.json
event_analytics-claude/backend/src/: batchWriter.js  db.js  index.js
event_analytics-claude/frontend/: index.html  package-lock.json  package.json  vite.config.js
event_analytics-claude/frontend/src/: App.jsx
event_analytics-claude/setup/: schema.sql  setup.sh
todos-anti-gravity/: .README.md.swp  package-lock.json
todos-antigravity/: README.md  package.json  server.js
todos-antigravity/public/: index.html
todos-js-antigravity/: init-db.js
(+12 files in other folders)
